# NeuroBank-FastAPI-Toolkit

./: .bandit  .bandit.yaml  .codespell-ignore-words.txt  .dockerignore  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .prettierrc.yaml  .radon.cfg  .ruff.toml  .safety  .vulture  AWS_OIDC_SETUP.md  CICD_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_TRIGGER.txt  DEVELOPMENT_GUIDE_OPTIMIZED.md  DEVELOPMENT_ROADMAP.md  DOCKER_FIX_DEPLOYED.md  DOCKER_HUB_READY.md  Dockerfile  FINAL_WORKFLOW_STATUS.md  GITHUB_ACTIONS_FIX.md  GIT_COMMANDS_HOTFIX.md  HOTFIX_PR_DESCRIPTION.md  HOTFIX_RAILWAY_CRASH.md  Jenkinsfile  LICENSE  Makefile  Makefile.deploy  PERFORMANCE_OPTIMIZATION.md  PIPELINE_FIX_SUMMARY.md  PRODUCTION_README.md  PR_DESCRIPTION.md  PR_MAIN_EPIC_DESCRIPTION.md  PR_MAIN_FINAL_EPIC.md  PR_MAIN_MERGE.md  PR_RAILWAY_DEPLOY.md  PR_README_SPECTACULAR.md  (+51 more)
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  lint_error.yml  tech_debt.yml
.github/workflows/: ci-cd-fixed.yml  ci-cd-pipeline.yml  ci-cd.yml  ci.yml  codeql.yml  deploy-prod-ecs.yml  deploy-staging-railway.yml  deploy.yml  docker-security.yml  ecs-taskdef-api.json  infra-terraform.yml  lint.yml  mutation-testing.yml  performance-testing.yml  production-pipeline.yml  security.yml  test.yml
alembic/: env.py
alembic/versions/: 8fe0bc0038f8_init_rbac.py  a3d9b2c1f7e0_normalize_naive_timestamps_to_utc.py
api/: __init__.py  index.py  requirements.txt
app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  security.py  telemetry.py
app/auth/: dependencies.py  jwt.py  password.py
app/backoffice/: router.py  router_broken.py  router_clean.py
app/backoffice/templates/: admin_reports.html  admin_transactions_new.html  admin_transactions_old.html  admin_transactions_simple.html  admin_users.html  basic_dashboard.html  dashboard.html  test_dashboard.html
app/crud/: __init__.py  role.py  user.py
app/models/: __init__.py  role.py  user.py
app/routers/: auth.py  operator.py  roles.py  trading.py  users.py
app/schemas/: __init__.py  role.py  user.py
app/security/: passwords.py
app/services/: errors.py  invoice_service.py  order_service.py  role_service.py  user_service.py
app/static/css/: styles.css
app/static/js/: admin.js  utils.js
app/tests/: conftest.py  test_auth.py  test_backoffice.py  test_logging.py  test_main.py  test_main_health.py  test_operator.py  test_performance.py  test_roles.py  test_roles_timestamps.py  test_security.py  test_telemetry.py  test_user_role_validation.py  test_users.py
app/utils/: logging.py
docker/: Dockerfile.api  README.md
docs/: ANALYSIS_TOOLS_GUIDE.md  DEPLOYMENT_GUIDE.md  MONITORING_SETUP.md  RBAC_GUIDE.md
docs/logs_48748397533/: 0_🧹 Cleanup & Artifact Management.txt  7_🔍 Code Quality & Security Analysis.txt  8_🎨 Frontend Assets & Performance.txt
docs/logs_48748397533/🎨 Frontend Assets & Performance/: 12_Post 📥 Checkout Repository.txt  13_Complete job.txt  1_Set up job.txt  2_📥 Checkout Repository.txt  3_🟢 Setup Node.js 18.txt  system.txt
docs/logs_48748397533/🔍 Code Quality & Security Analysis/: 1_Set up job.txt  20_Post 📥 Checkout Repository.txt  21_Complete job.txt  2_📥 Checkout Repository.txt  3_🐍 Setup Python 3.11.txt  4_📦 Install Dependencies.txt  5_🎨 Code Formatting Check (Black).txt  system.txt
docs/logs_48748397533/🧹 Cleanup & Artifact Management/: 1_Set up job.txt  2_📊 Workflow Summary.txt  3_Complete job.txt  system.txt
docs/logs_48748397574/: 0_Docker build (no push) (inference_service, trading_ai_system_inference_service).txt  1_test-and-lint.txt  2_Docker build (no push) (control_service, trading_ai_system_control_service).txt  3_Docker build (no push) (ingestion_service, trading_ai_system_ingestion_service).txt
docs/logs_48748397574/Docker build (no push) (control_service, trading_ai_system_control_service)/: 1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Build control_service.txt  6_Post Run actions_checkout@v4.txt  7_Complete job.txt  system.txt
docs/logs_48748397574/Docker build (no push) (inference_service, trading_ai_system_inference_service)/: 1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Build inference_service.txt  6_Post Run actions_checkout@v4.txt  7_Complete job.txt  system.txt
docs/logs_48748397574/Docker build (no push) (ingestion_service, trading_ai_system_ingestion_service)/: 1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Build ingestion_service.txt  6_Post Run actions_checkout@v4.txt  7_Complete job.txt  system.txt
docs/logs_48748397574/test-and-lint/: 14_Post Run actions_checkout@v4.txt  15_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Set up Python.txt  4_Cache pip.txt  5_Install deps (root + services).txt  6_Lint.txt  system.txt
docs/trading_ai_system_updated/trading_ai_system/: Dockerfile.dev  Makefile  README.md  docker-compose.yml
docs/trading_ai_system_updated/trading_ai_system/.devcontainer/: devcontainer.json  setup.sh
docs/trading_ai_system_updated/trading_ai_system/.github/workflows/: ci.yml  deploy-api-gateway.yml  deploy-control-service.yml  deploy-inference-service.yml  deploy-ingestion-service.yml
docs/trading_ai_system_updated/trading_ai_system/control_service/: main.py  requirements.txt
docs/trading_ai_system_updated/trading_ai_system/ecs/: api-gateway-task.json  control-service-task.json  inference-service-task.json  ingestion-service-task.json
docs/trading_ai_system_updated/trading_ai_system/inference_service/: main.py  requirements.txt
docs/trading_ai_system_updated/trading_ai_system/ingestion_service/: Dockerfile  main.py  requirements.txt
logs/: terminal_issues.json  terminal_issues.txt
monitoring/: create-alarms.sh  dashboard-config.json  prometheus.yml
monitoring/grafana-dashboards/: dashboards.yaml
monitoring/grafana-dashboards/dashboards/: example.json
scripts/: create_admin.py  create_issues_from_logs.py  verify-aws-oidc.sh
tests/: __init__.py  locustfile.py
