[tool.poetry]
name = "neurobank-fastapi-toolkit"
version = "0.1.0"
description = "Backend de operadores reales (FASE 2)"
authors = ["NeuroBank Team <team@neurobank.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.111.0"
uvicorn = {extras = ["standard"], version = "0.29.0"}
pydantic = "2.7.0"
python-dotenv = "1.0.1"
loguru = "0.7.2"
pytest = "8.2.0"
pytest-asyncio = "1.1.0"
httpx = "0.27.0"
watchtower = "3.0.0"
aws-xray-sdk = "2.13.0"
mangum = "^0.17.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = ["app/tests/*"]
