[project]
name = "neurobank-fastapi-toolkit"
version = "1.0.0"
description = "Professional banking operations API with enterprise-grade features"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# La configuración principal de Ruff se mantiene en ".ruff.toml" por claridad

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = ["app.tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-ra", "--strict-markers", "--cov=app", "--cov-report=term-missing", "--cov-report=html"]
asyncio_mode = "auto"
# markers: definir aquí si existen personalizados en el futuro

[tool.coverage.run]
source = ["app"]
omit = ["app/tests/*", "app/__init__.py", "*/migrations/*"]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if TYPE_CHECKING:",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]

[tool.bandit]
# La configuración principal de Bandit se mantiene en ".bandit"
